--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,4 +9,4 @@ jobs:
       - name: collie
         uses: dvkunion/collie_tricker@main
         with:
-          token: cft0qqa8uter77sjvso0  # your token,  It will be safer to use ${{ secrets.token }}, see [https://docs.github.com/actions/security-guides/encrypted-secrets] 
+          token: cg5910a8utesk8np8t9g  # your token,  It will be safer to use ${{ secrets.token }}, see [https://docs.github.com/actions/security-guides/encrypted-secrets] 
