--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,4 +9,4 @@ jobs:
       - name: collie
         uses: dvkunion/collie_tricker@main
         with:
-          token: baecfa77ca494a0c464d132d03ea3cab  # your token,  It will be safer to use ${{ secrets.token }}, see [https://docs.github.com/actions/security-guides/encrypted-secrets] 
+          token: baecfa77ca494a0c464d132d03ea3cab  
